; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_mpu401.c_mpu_timer_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_mpu401.c_mpu_timer_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@timer_open = common dso_local global i32 0, align 4
@tmr_running = common dso_local global i32 0, align 4
@curr_clocks = common dso_local global i32 0, align 4
@curr_ticks = common dso_local global i64 0, align 8
@next_event_time = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @mpu_timer_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mpu_timer_interrupt() #0 {
  %1 = load i32, i32* @timer_open, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %18

4:                                                ; preds = %0
  %5 = load i32, i32* @tmr_running, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %4
  br label %18

8:                                                ; preds = %4
  %9 = load i32, i32* @curr_clocks, align 4
  %10 = add nsw i32 %9, 1
  store i32 %10, i32* @curr_clocks, align 4
  %11 = load i32, i32* @curr_clocks, align 4
  %12 = call i64 @clocks2ticks(i32 %11)
  store i64 %12, i64* @curr_ticks, align 8
  %13 = load i64, i64* @curr_ticks, align 8
  %14 = load i64, i64* @next_event_time, align 8
  %15 = icmp uge i64 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %8
  store i64 -1, i64* @next_event_time, align 8
  %17 = call i32 @sequencer_timer(i32 0)
  br label %18

18:                                               ; preds = %3, %7, %16, %8
  ret void
}

declare dso_local i64 @clocks2ticks(i32) #1

declare dso_local i32 @sequencer_timer(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
